Bug 175568. Make shift+f10 menus show up in the right place, for scrolled documents and tree views. r=jan varga, sr=bz